[package]
name          = "tide-http-auth"
description   = "Basic and Bearer auth support for Tide"
version       = "0.1.0"
authors       = ["Chris Dickinson <christopher.s.dickinson@gmail.com>"]
edition       = "2018"
license       = "Apache-2.0"
documentation = "https://docs.rs/tide-http-auth"
homepage      = "https://github.com/chrisdickinson/tide-http-auth"
repository    = "https://github.com/chrisdickinson/tide-http-auth"
keywords      = ["auth", "tide", "async", "authentication", "bearer", "basic"]
categories    = ["asynchronous", "authentication"]
readme        = "README.md"

[dependencies]
http-types  = "2.0.0"
tide        = "0.9.0"
futures     = "0.3.5"
tracing     = "0.1.14"
async-trait = "0.1.31"
base64      = "0.12.1"

[dev-dependencies]
tide = "0.9.0"
async-std = { version = "1.6.0", features = ["attributes"] }
